--- a/research-funding/pom.xml
+++ b/research-funding/pom.xml
@@ -25,6 +25,12 @@
 	  <artifactId>poi</artifactId>
 	  <version>3.10-FINAL</version>
   </dependency>
+  <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
   
