--- a/research-funding/pom.xml
+++ b/research-funding/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.govhack</groupId>
   <artifactId>research-funding</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Research Funding Visualisation</name>
   <url>http://maven.apache.org</url>
