Cleaned SQL output for MySQL.  ("-" characters NULL, as well as quotes around dates)

--- a/vic-builder/datasets/Makefile
+++ b/vic-builder/datasets/Makefile
@@ -7,8 +7,12 @@ sql:
 	python convert_csv_sql.py CSV/VBA-DataVic-Building-Permits-2014-January-to-April.csv >> VBA.sql
 
 sqlite:
-	sqlite3 VBA.db < init.sql
+	sqlite3 VBA.db < init_sqlite.sql
 	sqlite3 VBA.db < VBA.sql
+
+mysql:
+	mysql -uroot -pexdstc vba < init_mysql.sql
+	mysql -uroot -pexdstc vba < VBA.sql
 
 clean:
 	rm VBA.db
